--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -16,6 +16,7 @@ body
   margin: 0
   padding: 0
   height: 100%
+  background: #92A2A2
   font-family: $font-family !important
 
 *,
@@ -74,10 +75,10 @@ header
       background-image: url("data:image/svg+xml;charset=utf8,<svg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'><path stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/></svg>")
 
 .home-container
-  height: 600px
+  height: 100%
   background-size: cover
   padding-top: 60px
-  border-bottom: 1px solid #e8e8e8
+ 
 
   form
     width: 516px
