--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -6,7 +6,9 @@
 
 $primary-color: #125068
 $text-color: #0C3342
+$err-color: #DF5740
 $font-family: 'Lato', sans-serif
+
 
 html
   box-sizing: border-box
@@ -18,6 +20,12 @@ body
   height: 100%
   background: #92A2A2
   font-family: $font-family !important
+
+form input.error 
+  border-color: red
+.errMes
+  color: $err-color !important
+  margin-top: 0px !important
 
 *,
 *:before,
@@ -99,10 +107,22 @@ header
     text-align: center
     color: $text-color
     font-family: $font-family
-    text-transform: uppercase
     font-weight: bold
     margin-top: 160px
     line-height: 1.3
     text-shadow: 3px 0 15px rgba(0,0,0,0.3)
     font-size: 48px
 
+.headerElement
+   width: 50px
+
+.headerContainer
+    border-bottom: (1px solid black)
+
+.details li
+    list-style: none
+li
+    margin-bottom: 10px
+
+.profileContainer
+     margin-top: 46px
